# simple-webserver

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: aarch64-toolchain.cmake
rpm/: lexiserver.service  lexiserver.spec.in  lexiserver.sysusers
src/: lexiserver.c
